--- a/devtools/panel.html
+++ b/devtools/panel.html
@@ -1,3 +1,3 @@
-<iframe id="content" title="DevTools Panel" width="100%" height="100%">
-</iframe>
+<iframe id="content" title="DevTools Panel" width="100%" height="100%"></iframe>
+
 <script src="panel.js"></script>
