--- a/devtools/panel.html
+++ b/devtools/panel.html
@@ -1,3 +1,21 @@
-<iframe id="content" title="DevTools Panel" width="100%" height="100%"></iframe>
-
-<script src="panel.js"></script>
+<html>
+  <head>
+    <style>
+      body {
+        margin: 0;
+      }
+      iframe {
+        border: none;
+      }
+    </style>
+  </head>
+  <body>
+    <iframe
+      id="content"
+      title="DevTools Panel"
+      width="100%"
+      height="100%"
+    ></iframe>
+    <script src="panel.js"></script>
+  </body>
+</html>
