Bug: Extension redirects not working properly (#468)
* Fix

* Fix devtools allow redirects

* Fix extension redirects on web navigation

--- a/devtools/common/panel.html
+++ b/devtools/common/panel.html
@@ -4,6 +4,7 @@
       body {
         margin: 0;
         background-color: #f1f5f9;
+        font-family: Inter, sans-serif;
       }
       iframe {
         border: none;
@@ -80,6 +81,7 @@
       </p>
     </div>
 
+    <script src="url.js"></script>
     <script src="panel.js"></script>
   </body>
 </html>
